# pah

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: pypl.yaml
docs/: DEVELOPMENT.md
src/pah/: __init__.py  cli.py  gui.py  pah.py
src/pah/models/: __init__.py
src/pah/services/: llm.py  pdf.py
src/pah_app/: __init__.py  app.py
