[project]
authors = [
  {name = "ras0q"},
]
dependencies = [
  "litellm>=1.71.2",
  "pydantic>=2.11.5",
  "pymupdf>=1.26.0",
]
description = "PDF Auto Highlighter"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "pah"
readme = "README.md"
requires-python = ">=3.13"

[project.urls]
homepage = "https://github.com/ras0q/pah"
issues = "https://github.com/ras0q/pah/issues"
repository = "https://github.com/ras0q/pah"

[project.scripts]
pah = "pah:cli"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.27.0", "uv-dynamic-versioning>=0.8.2"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
latest-tag = true
pattern = '(?P<base>\d+\.\d+\.\d+)'
strict = true
vcs = "git"

[tool.uv.workspace]
members = ["pah"]
