[project]
authors = [
  {name = "ras0q"},
]
description = "PDF Auto Highlighter"
dynamic = ["version", "dependencies", "optional-dependencies"]
license = {file = "LICENSE"}
name = "pah"
readme = "README.md"
requires-python = ">=3.13"

[project.urls]
homepage = "https://github.com/ras0q/pah"
issues = "https://github.com/ras0q/pah/issues"
repository = "https://github.com/ras0q/pah"

[project.scripts]
pah = "pah.cli:cli"
pah-app = "pah_app:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "uv-dynamic-versioning"]

[tool.hatch.build.targets.wheel]
packages = ["src/pah"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.metadata.hooks.uv-dynamic-versioning]
dependencies = ["pah-core=={{version}}"]
optional-dependencies = {gui = ["pah-gui=={{version}}"]}

[tool.uv-dynamic-versioning]
bump = true
latest-tag = true
pattern = '(?P<base>\d+\.\d+\.\d+)'
strict = true
style = "pep440"
vcs = "git"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
pah-core = {workspace = true}
pah-gui = {workspace = true}
